Round-trip working with Bonita

--- a/src/main/resources/templates/requestValidationForm.html
+++ b/src/main/resources/templates/requestValidationForm.html
@@ -16,7 +16,7 @@
         Request details: <input type="text" th:field="*{description}">
     </p>
     <p>
-        Do you valid the request?: <input type="text" th:field="*{valid}">
+        Do you valid the request?: <input type="checkbox" th:field="*{valid}">
     </p>
     <p>
         Submit URL (should be hidden in real life): <input type="text" th:field="*{submitURL}">
